--- a/book.toml
+++ b/book.toml
@@ -1,5 +1,5 @@
 [book]
-tite = "Unity"
+tite = "Ressource d'enseignement libre sur Unity"
 authors = ["Thomas O Fredericks"]
 language = "fr"
 multilingual = false
